# tensor-network-futurelens

./: .gitignore  README.md  briefing.md  pyproject.toml
docs/: FINDINGS.md  OPEN_DIRECTIONS.md  literature_review.md
docs/00_synthetic_validation/: plan.md  summary.md
docs/01_gpt2_correlations/: plan.md  summary.md
docs/02_gpt2_baselines_mps/: plan.md  summary.md
docs/03_const_learned_phi/: plan.md  summary.md
docs/04_masked_mps/: plan.md  summary.md
docs/05_connected_transfer/: plan.md  summary.md
docs/06_mechanistic_realization/: plan.md  summary.md
docs/07_strong_baselines_kl/: plan.md  summary.md
docs/08_sweep/: plan.md  summary.md
docs/09_learned_phi_bridge/: plan.md  summary.md
docs/10_born_machine/: plan.md  summary.md
docs/11_scale_gpt2_medium/: plan.md  summary.md
docs/12_gptj_causal_intervention/: plan.md  summary.md
docs/12_mythos_sprint/: plan.md  research_log.md  summary.md
docs/13_long_horizon_kl/: plan.md  summary.md
scripts/: cache_residuals.py  compute_correlations.py  exp05_connected_transfer.py  exp06_mechanistic.py  exp07_strong_baselines.py  exp08_sweep.py  exp09_bridge.py  exp10_born.py  exp11_scale.py  exp12_causal.py  exp13_long_horizon.py  exp14_mech_table.py  exp14_prep.py  exp14_seeds.py  exp14_stats.py  exp15_block.py  exp16_powerlaw.py  exp16_stability.py  plot_exp05.py  plot_exp07.py  plot_exp08.py  plot_exp09.py  plot_exp10.py  plot_exp11.py  plot_exp12.py  plot_exp13.py  plot_exp14.py  plot_exp14_mech.py  plot_exp15.py  plot_exp16_medium.py  plot_exp16_minclass.py  plot_exp16_powerlaw.py  plot_exp16_stability.py  plot_exp16_tail.py  plot_masked.py  plot_probes.py  plot_probes_v2.py  probe_gptj.py  run_synthetic_validation.py  train_masked_mps.py  (+2 more)
tests/: test_correlations.py  test_exp_fits.py  test_mps_shapes.py  test_phi.py  test_realization.py  test_transfer_matrix.py  test_windowing.py
(+91 files in other folders)
